AG-3390 - Fix header 'jump' on darkmode toggle

--- a/packages/ag-charts-website/src/components/site-header/gridSiteHeader.module.scss
+++ b/packages/ag-charts-website/src/components/site-header/gridSiteHeader.module.scss
@@ -188,10 +188,6 @@
 }
 
 .navItem {
-    &:not(:last-child) {
-        border-bottom: 1px solid var(--site-header-background);
-    }
-
     @media screen and (min-width: $breakpoint-site-header-small) {
         &:hover a::after {
             opacity: 0.25;
@@ -215,8 +211,6 @@
     }
 
     #{$darkmode-selector} & {
-        border-bottom: 1px solid #121f29;
-
         @media screen and (min-width: $breakpoint-site-header-small) {
             border-bottom: none;
         }
@@ -263,7 +257,7 @@
     }
 
     #{$darkmode-selector} & {
-        font-weight: 400;
+        font-weight: 500;
         opacity: 0.8;
     }
 }
